--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,12 +11,13 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+  
 
-
-# Configuration de la base de données mySQL ()
-# spring.datasource.url=jdbc:mysql://localhost:3306/timsoft_db?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+# Configuration de la base de donnÃ©es mySQL ()
+# spring.datasource.url=jdbc:mysql://localhost:3306/siwar_db?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
 # spring.datasource.username=root
 # spring.datasource.password=
+
 
 
 # # Hibernate My sql
